# unitree_neural_control

./: CMakeLists.txt  README.md  package.xml
config/: unitree_a1_neural_control.param.yaml
docker/: Dockerfile
include/unitree_a1_neural_control/: unitree_a1_neural_control.hpp  unitree_a1_neural_control_node.hpp  visibility_control.hpp
include/unitree_neural_control/: unitree_neural_control.hpp  unitree_neural_control_node.hpp
launch/: unitree_a1_neural_control.launch.py
src/: main.cpp  unitree_a1_neural_control.cpp  unitree_a1_neural_control_node.cpp  unitree_neural_control.cpp  unitree_neural_control_node.cpp
